tree-sitter-duck/grammar.js
    source_file: $ => $.document,
    _statement: $ => choice($.effect_binding_statement, $.resume_dup_statement, $.prefix_signature_statement, $.prefix_fact_statement, $.prefix_unsafe_proof_statement, $.binding_statement, $.type_pattern_statement, $.return_statement, $.for_statement, $.break_statement, $.continue_statement, $.index_assignment, $.assignment, $.expression_statement),
    binding_statement: $ => seq(repeat(field("attribute", $.attribute_group)), choice(seq(field("kind", "let"), optional(field("recursive", "rec"))), seq(field("kind", "const"), optional(field("open", "open")))), optional(field("linear", "!")), field("name", $._binding_pattern), optional(seq(":", field("type", $.type_reference))), "=", field("value", $._expression), repeat(seq("and", field("mutual_name", $.identifier), optional(seq(":", field("mutual_type", $.type_reference))), "=", field("mutual_value", $._expression))), optional(seq("else", field("alternative", $.block))), ";"),
    unit_pattern: $ => seq("(", ")"),
    break_statement: $ => seq("break", optional(field("value", $._expression)), ";"),
    continue_statement: $ => seq("continue", ";"),
    for_statement: $ => choice($._array_union_for_statement, seq("for", field("first", $._match_pattern), optional(seq(",", field("second", $._match_pattern))), "in", field("start_or_collection", $.condition_expression), optional(seq(choice("..", "..="), field("end", $.condition_expression), optional(seq("by", field("step", $.condition_expression))))), field("body", $._collection_range_body)), seq("for", field("start", $.condition_expression), choice("..", "..="), field("end", $.condition_expression), optional(seq("by", field("step", $.condition_expression))), field("body", $._numeric_range_body))),
    _array_union_for_statement: $ => seq("for", field("first", choice($._array_union_alternative_pattern, $._array_union_pattern)), optional(seq(",", field("second", $._match_pattern))), "in", field("start_or_collection", $.condition_expression), optional(seq(choice("..", "..="), field("end", $.condition_expression), optional(seq("by", field("step", $.condition_expression))))), field("body", $._collection_range_body)),
    expression_statement: $ => $._expression,
    _expression: $ => choice($.try_with_expression, $.loop_expression, $.arrow_function, $.recursive_function, $.recursive_call_expression, $.if_expression, $.case_function_expression, $.case_expression, $.binary_expression, $.is_expression, $.as_expression, $.unary_expression, $.application_expression, $.postfix_expression, $.effect_handler_expression),
    arrow_function: $ => choice($._shape_arrow, $._effect_arrow, $._value_arrow),
    parameter_list: $ => seq("(", optional(seq(seq($.parameter, repeat(seq(",", $.parameter))), optional(","))), ")"),
    parameter: $ => seq(optional(choice(seq("const", optional("...")), "!")), field("name", choice($.identifier, $._fixity_identifier_alias, $.wildcard)), optional(seq(":", field("type", $.type_reference)))),
    if_expression: $ => prec.right(seq("if", choice(seq("let", field("pattern", $._match_pattern), "=", field("value", $.condition_expression)), seq("(", seq("let", field("pattern", $._match_pattern), "=", field("value", $.condition_expression)), ")"), field("condition", $.condition_expression)), "then", field("consequence", $.conditional_branch), repeat($.else_if_clause), optional($.else_clause), "end")),
    else_clause: $ => prec(1, seq("else", field("alternative", $.conditional_branch))),
    conditional_branch: $ => repeat1(seq($._statement, optional(";"))),
    union_pattern: $ => seq("#", field("case", $.constructor_identifier), optional(choice(seq($._application_space, field("value", choice($.identifier, $.wildcard))), seq($._application_space, field("value", choice($.unit_pattern, $.union_pattern, $.array_pattern, $.positional_product_pattern))), field("value", choice($.unit_pattern, $.union_pattern, $.array_pattern, $.positional_product_pattern))))),
    condition_expression: $ => choice($.condition_binary_expression, $.condition_is_expression, $.condition_unary_expression, $.condition_application_expression, $.condition_postfix_expression, $.union_case),
    condition_postfix_expression: $ => choice($.condition_call_expression, $.condition_field_expression, $.condition_index_expression, $.condition_parenthesized_expression, $.number, $.string, $.character, $.boolean, $.atom_expression, $.import_meta_expression, $.intrinsic_identifier, $.identifier, $._aggregate_constructor_identifier, $._effect_identifier_alias, $.linear_reference),
    condition_index_expression: $ => prec.left(10, seq(field("object", choice($.condition_postfix_expression, $.union_case)), field("open", token.immediate(prec(1, "["))), optional($._index_contents), "]")),
    binary_expression: $ => prec.left(6, seq(field("left", $._expression), field("operator", $.operator_symbol), field("right", $._expression))),
    loop_expression: $ => prec(10, seq("loop", field("body", $.block))),
    _match_pattern: $ => choice($.alternative_pattern, $._single_match_pattern),
    _binding_pattern: $ => choice($._binding_alternative_pattern, $._single_binding_pattern),
    alternative_pattern: $ => prec.left(seq($._single_match_pattern, repeat1(seq($._pattern_pipe, $._single_match_pattern)))),
    _single_match_pattern: $ => choice($.const_value_pattern, $.type_pattern, $.union_pattern, $.number, $.string, $.character, $.boolean, $.identifier, $._aggregate_constructor_identifier, $.wildcard, $.array_pattern, $.positional_product_pattern, $.named_shape_pattern),
    application_expression: $ => prec.left(9, seq(field("function", choice($.application_expression, $.postfix_expression)), $._application_space, field("argument", $.postfix_expression))),
    postfix_expression: $ => choice($.call_expression, $.field_expression, $.index_expression, $._primary_expression),
    field_expression: $ => prec.left(10, choice(seq(field("object", $.postfix_expression), ".", field("field", choice($.identifier, "end"))), seq(field("object", $._effect_identifier_alias), ".", field("field", choice($.identifier, "end"))))),
    _primary_expression: $ => choice($.prefix_by_proof_expression, $.number, $.string, $.character, $.template_literal, $.boolean, $.identifier, $._fixity_identifier_alias, $.wildcard, $._aggregate_constructor_identifier, $._effect_identifier_alias, $.intrinsic_identifier, $.atom_expression, $.import_meta_expression, $.import_expression, $.include_expression, $.named_product, $.positional_product, $.union_case, $.linear_reference, $.unit_pattern, $.array_expression, $.array_repeat_expression, $.shape_value, $.scratch_expression, $.block, $.parenthesized_expression),
    template_literal: $ => seq($.template_start, repeat(choice($.template_text, $.template_interpolation)), "`"),
    template_interpolation: $ => seq("{", field("value", $._expression), "}"),
    union_case: $ => prec(-1, seq("#", field("case", $.constructor_identifier), optional(seq($._application_space, field("value", $.postfix_expression))))),
    _index_contents: $ => choice(seq(seq($._expression, repeat(seq(",", $._expression))), optional(",")), $._array_spread_with_tail, seq(optional(seq(seq($._expression, repeat(seq(",", $._expression))), ",")), $.array_spread), seq($._expression, ";", $._expression)),
    array_pattern: $ => seq("[", optional(seq(seq($._array_pattern_element, repeat(seq(",", $._array_pattern_element))), optional(","))), "]"),
    _array_pattern_element: $ => choice($.identifier, $.wildcard, $.union_pattern, $.array_pattern, $.positional_product_pattern, $.array_rest_pattern),
    positional_product_pattern: $ => seq("(", seq($._match_pattern, ",", choice($.product_rest_pattern, seq($._match_pattern, repeat(seq(",", $._match_pattern)), optional(",")))), ")"),
    named_shape_pattern: $ => prec(1, seq("{", optional(seq(seq($.named_shape_pattern_field, repeat(seq(",", $.named_shape_pattern_field))), optional(","))), "}")),
    named_shape_pattern_field: $ => seq(".", field("name", $.identifier), optional(choice(seq("=", field("pattern", $._match_pattern)), seq(":", field("type", $.type_reference))))),
    shape_value: $ => prec(2, field("fields", $.shape_field_block)),
    shape_field_block: $ => seq("{", repeat(seq(choice($.shape_field, $.shorthand_field), optional(","))), "}"),
    shape_field: $ => seq(".", field("name", choice($.identifier, "end")), "=", field("value", choice($.shape_nullary_union_case, $._expression))),
    block: $ => seq("do", repeat(seq($._statement, optional(";"))), "end"),
    wildcard: $ => "_",
    _aggregate_constructor_identifier: $ => $._struct_identifier_alias,
    _pattern_pipe: $ => token(prec(2, "|")),
    boolean: $ => choice("true", "false"),
    _collection_range_body: $ => prec(10, $.block),
    _numeric_range_body: $ => prec(10, $.block),
    _shape_arrow: $ => prec(100, $._shape_arrow_expression),
    _effect_arrow: $ => prec(100, $._effect_arrow_expression),
    _value_arrow: $ => prec(100, $._value_arrow_expression),
    _effect_identifier_alias: $ => alias($.effect_identifier, $.identifier),
    _fixity_identifier_alias: $ => alias($._fixity_identifier, $.identifier),
    lowercase_identifier: $ => token(prec(2, /[a-z][A-Za-z0-9_]*/)),
    identifier: $ => token(/([A-Za-z][A-Za-z0-9_]{0,1}|[A-Za-df-z][A-Za-z0-9_]{2}|e[A-Za-mo-z0-9_][A-Za-z0-9_]|en[A-Zace-z0-9_]|[A-Za-km-z][A-Za-z0-9_]{3}|l[A-Za-np-z0-9_][A-Za-z0-9_]{2}|lo[A-Za-np-z0-9_][A-Za-z0-9_]|loo[A-Za-oq-z0-9_]|[A-Za-z][A-Za-z0-9_]{4}[A-Za-z0-9_]*)/),
    constructor_identifier: $ => token(prec(2, /[A-Z][A-Za-z0-9_]*/)),
    operator_symbol: $ => token(/([-!$%&*+<>?@\\^|~:][.\-!$%&*+\/<=>?@\\^|~:]*|\/([.\-!$%&*+<=>?@\\^|~:][.\-!$%&*+\/<=>?@\\^|~:]*)?|=[.\-!$%&*+\/<=?@\\^|~:][.\-!$%&*+\/<=>?@\\^|~:]*)/),
    number: $ => token(/(0[xX][0-9a-fA-F]+([iu][1-9][0-9]*)?|[0-9]+(\.[0-9]+)?([eE][+-]?[0-9]+)?([iu][1-9][0-9]*|f(32|64))?)/),
    string: $ => token(/"([^"\\\n\r]|\\[ntr"\\])*"/),
    character: $ => token(/'([^'\\\n\r]|\\[ntr'\\])'/),
    template_start: $ => token(prec(2, /`/)),
    template_text: $ => token(prec(1, /([^`{}\\]|\\[ntr`\\]|\{\{|\}\})+/)),
  },
});
