tree-sitter-duck/test/corpus/loop_expressions.txt
==================
Loop expression with a value break
==================
let result = loop do
  break 42;
end;
---

(source_file
  (binding_statement
    (identifier)
    (loop_expression
      (block
        (break_statement
          (postfix_expression
            (number)))))))

==================
Wildcard and binderless ranges
==================
for _ in 0..2 do
  ()
end;
for 0..2 do
  ()
end
for value in 0..=2 do
  ()
end
for 0..=2 do
  ()
end
---

(source_file
  (for_statement
    (wildcard)
    (condition_expression
      (condition_postfix_expression
        (number)))
    (condition_expression
      (condition_postfix_expression
        (number)))
    (block
      (expression_statement
        (postfix_expression
          (unit_pattern)))))
  (for_statement
    (condition_expression
      (condition_postfix_expression
        (number)))
    (condition_expression
      (condition_postfix_expression
        (number)))
    (block
      (expression_statement
        (postfix_expression
          (unit_pattern)))))
  (for_statement
    (identifier)
    (condition_expression
      (condition_postfix_expression
        (number)))
    (condition_expression
      (condition_postfix_expression
        (number)))
    (block
      (expression_statement
        (postfix_expression
          (unit_pattern)))))
  (for_statement
    (condition_expression
      (condition_postfix_expression
        (number)))
    (condition_expression
      (condition_postfix_expression
        (number)))
    (block
      (expression_statement
        (postfix_expression
          (unit_pattern))))))

==================
Refutable collection loop pattern
==================
for index, #Some value in values do
  ()
end
---

(source_file
  (for_statement
    (identifier)
    (union_pattern
      (constructor_identifier)
      (identifier))
    (condition_expression
      (condition_postfix_expression
        (identifier)))
    (block
      (expression_statement
        (postfix_expression
          (unit_pattern))))))

==================
Union payload loop headers
==================
for #Some value in values do
  value
end
for #Some value | #Other value in values do
  value
end
for #Some[left] in values do
  left
end
for #Some[left] | #Other[right] in values do
  left
end
for #Some(left, right) in values do
  left
end
for #Some#Other value in values do
  value
end
for #Some[left]..finish do
  left
end
---

(source_file
  (for_statement
    (union_pattern
      (constructor_identifier)
      (identifier))
    (condition_expression
      (condition_postfix_expression
        (identifier)))
    (block
      (expression_statement
        (postfix_expression
          (identifier)))))
  (for_statement
    (alternative_pattern
      (union_pattern
        (constructor_identifier)
        (identifier))
      (union_pattern
        (constructor_identifier)
        (identifier)))
    (condition_expression
      (condition_postfix_expression
        (identifier)))
    (block
      (expression_statement
        (postfix_expression
          (identifier)))))
  (for_statement
    (union_pattern
      (constructor_identifier)
      (array_pattern
        (identifier)))
    (condition_expression
      (condition_postfix_expression
        (identifier)))
    (block
      (expression_statement
        (postfix_expression
          (identifier)))))
  (for_statement
    (alternative_pattern
      (union_pattern
        (constructor_identifier)
        (array_pattern
          (identifier)))
      (union_pattern
        (constructor_identifier)
        (array_pattern
          (identifier))))
    (condition_expression
      (condition_postfix_expression
        (identifier)))
    (block
      (expression_statement
        (postfix_expression
          (identifier)))))
  (for_statement
    (union_pattern
      (constructor_identifier)
      (positional_product_pattern
        (identifier)
        (identifier)))
    (condition_expression
      (condition_postfix_expression
        (identifier)))
    (block
      (expression_statement
        (postfix_expression
          (identifier)))))
  (for_statement
    (union_pattern
      (constructor_identifier)
      (union_pattern
        (constructor_identifier)
        (identifier)))
    (condition_expression
      (condition_postfix_expression
        (identifier)))
    (block
      (expression_statement
        (postfix_expression
          (identifier)))))
  (for_statement
    (condition_expression
      (condition_postfix_expression
        (condition_index_expression
          (union_case
            (constructor_identifier))
          (postfix_expression
            (identifier)))))
    (condition_expression
      (condition_postfix_expression
        (identifier)))
    (block
      (expression_statement
        (postfix_expression
          (identifier))))))

==================
Break without a value
==================
loop do
  break;
end;
---

(source_file
  (expression_statement
    (loop_expression
      (block
        (break_statement)))))

==================
Inline break without a value
==================
loop do
  if done then
    break;
  end;
end;
---

(source_file
  (expression_statement
    (loop_expression
      (block
        (expression_statement
          (if_expression
            (condition_expression
              (condition_postfix_expression
                (identifier)))
            (conditional_branch
              (break_statement))))))))

==================
Bare break does not consume the next line
==================
loop do
  break;
  42
end;
---

(source_file
  (expression_statement
    (loop_expression
      (block
        (break_statement)
        (expression_statement
          (postfix_expression
            (number)))))))

==================
No-demand binding positions
==================
let _ = 1;
let ignore = (_, const _) => 2;
const { .ignored = _, .value } = pair;
let selected = if let #Ok _ = result then
  1
else
  0
end;
---

(source_file
  (binding_statement
    (wildcard)
    (postfix_expression
      (number)))
  (binding_statement
    (identifier)
    (arrow_function
      (parameter_list
        (parameter
          (wildcard))
        (parameter
          (wildcard)))
      (postfix_expression
        (number))))
  (binding_statement
    (named_shape_pattern
      (named_shape_pattern_field
        (identifier)
        (wildcard))
      (named_shape_pattern_field
        (identifier)))
    (postfix_expression
      (identifier)))
  (binding_statement
    (identifier)
    (if_expression
      (union_pattern
        (constructor_identifier)
        (wildcard))
      (condition_expression
        (condition_postfix_expression
          (identifier)))
      (conditional_branch
        (expression_statement
          (postfix_expression
            (number))))
      (else_clause
        (conditional_branch
          (expression_statement
            (postfix_expression
              (number))))))))

==================
Continue in a loop expression
==================
let result = loop do
  continue;
end;

---

(source_file
  (binding_statement
    (identifier)
    (loop_expression
      (block
        (continue_statement)))))

==================
Loop is a reserved keyword
==================
loop 42
---

(source_file
  (ERROR)
  (expression_statement
    (postfix_expression
      (number))))

==================
Loop cannot be used as a binding name
==================
let loop = 1;
---

(source_file
  (binding_statement
    (identifier)
    (ERROR
      (lowercase_identifier))
    (postfix_expression
      (number))))
